--- a/AzureSQLWorkshop/azuresqlworkshop/02-DeployAndConfigure/cli/AzureCli.ipynb
+++ b/AzureSQLWorkshop/azuresqlworkshop/02-DeployAndConfigure/cli/AzureCli.ipynb
@@ -25,6 +25,8 @@
                 "\r\n",
                 "In this activity, you'll walk through getting set up with the Azure CLI, using a PowerShell notebook in ADS.  \r\n",
                 "\r\n",
+                "> Note: in PowerShell notebooks, you can use the PowerShell Az module or the Azure CLI. In this activity, you'll explore the Azure CLI, but you should know there are similar commands available for the [PowerShell Az module](https://docs.microsoft.com/en-us/powershell/azure/new-azureps-module-az?view=azps-3.5.0).  \r\n",
+                "\r\n",
                 "\r\n",
                 "**Set up**   \r\n",
                 "\r\n",
@@ -43,7 +45,7 @@
         {
             "cell_type": "code",
             "source": [
-                "# Log in to the Azure portal with your workshop credentials\r\n",
+                "# Log in to the Azure portal with the Azure account (email address) and password you're using for the workshop\r\n",
                 "# You may get an error initially, run again, and you should get a pop-up that directs you through authenticating\r\n",
                 "az login"
             ],
@@ -52,13 +54,15 @@
                 "tags": []
             },
             "outputs": [],
-            "execution_count": null
+            "execution_count": 0
         },
         {
             "cell_type": "code",
             "source": [
                 "# Specify your subscription for the workshop\r\n",
-                "# Should appear in the list of subscriptions output in previous cell under "subscriptionId" or "Id"\r\n",
+                "# Should appear in the list of subscriptions output in previous cell under ",
+                " or ",
+                "\r\n",
                 "az account set --subscription <subscription-ID>"
             ],
             "metadata": {
@@ -66,9 +70,9 @@
             },
             "outputs": [
                 {
+                    "output_type": "stream",
                     "name": "stdout",
-                    "text": "",
-                    "output_type": "stream"
+                    "text": ""
                 }
             ],
             "execution_count": 2
@@ -86,9 +90,9 @@
             },
             "outputs": [
                 {
+                    "output_type": "stream",
                     "name": "stdout",
-                    "text": "",
-                    "output_type": "stream"
+                    "text": ""
                 }
             ],
             "execution_count": 3
@@ -112,7 +116,7 @@
                 "azdata_cell_guid": "828e608f-fadd-40a7-8ac2-1f5394a81412"
             },
             "outputs": [],
-            "execution_count": null
+            "execution_count": 0
         },
         {
             "cell_type": "markdown",
@@ -133,7 +137,7 @@
                 "azdata_cell_guid": "85457b28-ac25-40a1-8dea-5cd1ca8a70f2"
             },
             "outputs": [],
-            "execution_count": null
+            "execution_count": 0
         },
         {
             "cell_type": "markdown",
@@ -154,9 +158,9 @@
             },
             "outputs": [
                 {
+                    "output_type": "stream",
                     "name": "stdout",
-                    "text": "[\n  {\n    \"currentValue\": 12582912.0,\n    \"displayName\": \"Database Size\",\n    \"limit\": 34359738368.0,\n    \"name\": \"database_size\",\n    \"nextResetTime\": null,\n    \"resourceName\": \"AdventureWorks0218\",\n    \"unit\": \"Bytes\"\n  },\n  {\n    \"currentValue\": 16777216.0,\n    \"displayName\": \"Database Allocated Size\",\n    \"limit\": 34359738368.0,\n    \"name\": \"database_allocated_size\",\n    \"nextResetTime\": null,\n    \"resourceName\": \"AdventureWorks0218\",\n    \"unit\": \"Bytes\"\n  }\n]\n",
-                    "output_type": "stream"
+                    "text": "[\n  {\n    \"currentValue\": 12582912.0,\n    \"displayName\": \"Database Size\",\n    \"limit\": 34359738368.0,\n    \"name\": \"database_size\",\n    \"nextResetTime\": null,\n    \"resourceName\": \"AdventureWorks0218\",\n    \"unit\": \"Bytes\"\n  },\n  {\n    \"currentValue\": 16777216.0,\n    \"displayName\": \"Database Allocated Size\",\n    \"limit\": 34359738368.0,\n    \"name\": \"database_allocated_size\",\n    \"nextResetTime\": null,\n    \"resourceName\": \"AdventureWorks0218\",\n    \"unit\": \"Bytes\"\n  }\n]\n"
                 }
             ],
             "execution_count": 6
@@ -211,7 +215,7 @@
                 "azdata_cell_guid": "1af59f8b-afe3-43c5-863d-3549f06871ed"
             },
             "outputs": [],
-            "execution_count": null
+            "execution_count": 0
         },
         {
             "cell_type": "markdown",
@@ -234,7 +238,7 @@
                 "azdata_cell_guid": "5114ebd7-b37d-4cd8-abbc-4a00ba77f798"
             },
             "outputs": [],
-            "execution_count": null
+            "execution_count": 0
         },
         {
             "cell_type": "markdown",
@@ -278,7 +282,7 @@
                 "azdata_cell_guid": "c540779a-9c4d-472f-8ddc-6fc59b8437d4"
             },
             "outputs": [],
-            "execution_count": null
+            "execution_count": 0
         },
         {
             "cell_type": "markdown",
@@ -326,7 +330,7 @@
                 "azdata_cell_guid": "34f23b31-0252-436f-abdb-f0b7208f44b7"
             },
             "outputs": [],
-            "execution_count": null
+            "execution_count": 0
         }
     ]
 }
