--- a/AzureSQLWorkshop/azuresqlworkshop/02-DeployAndConfigure/loaddata/LoadData.ipynb
+++ b/AzureSQLWorkshop/azuresqlworkshop/02-DeployAndConfigure/loaddata/LoadData.ipynb
@@ -308,8 +308,6 @@
         {
             "cell_type": "markdown",
             "source": [
-                "In the **Module 4: Performance**, there will be an opportunity to explore how you can improve your throughput and performance of bulk loading activities.   \r\n",
-                "\r\n",
                 "For now, let's check how many rows were inserted into our table:"
             ],
             "metadata": {
@@ -342,7 +340,6 @@
                 },
                 {
                     "output_type": "execute_result",
-                    "metadata": {},
                     "execution_count": 8,
                     "data": {
                         "application/vnd.dataresource+json": {
@@ -360,7 +357,8 @@
                             ]
                         },
                         "text/html": "<table><tr><th>(No column name)</th></tr><tr><td>2807797</td></tr></table>"
-                    }
+                    },
+                    "metadata": {}
                 }
             ],
             "execution_count": 8
@@ -402,6 +400,15 @@
                 }
             ],
             "execution_count": 2
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "You've seen how you can optimize bulk inserts in this activity. We are really just skimming the surface here, and in the Performance module you'll learn about other ways you can optimize performance. In future development of this workshop, we plan to add more here (things like parallelism are not mentioned but can help). Until then, You can check the [documentation (under **How to** > **Load and move data**)](https://docs.microsoft.com/en-us/azure/sql-database/sql-database-load-from-csv-with-bcp) for more information.  "
+            ],
+            "metadata": {
+                "azdata_cell_guid": "ece2733b-4152-4e47-90ea-cda0da0882cb"
+            }
         }
     ]
 }
