review and updates checkin

--- a/AzureSQLWorkshop/azuresqlworkshop/02-DeployAndConfigure/loaddata/LoadData.ipynb
+++ b/AzureSQLWorkshop/azuresqlworkshop/02-DeployAndConfigure/loaddata/LoadData.ipynb
@@ -119,12 +119,12 @@
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:00.011"
+                        "text/html": "Total execution time: 00:00:00.016"
                     },
                     "metadata": {}
                 }
             ],
-            "execution_count": 3
+            "execution_count": 6
         },
         {
             "cell_type": "markdown",
@@ -159,12 +159,12 @@
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:00.017"
+                        "text/html": "Total execution time: 00:00:00.015"
                     },
                     "metadata": {}
                 }
             ],
-            "execution_count": 4
+            "execution_count": 7
         },
         {
             "cell_type": "markdown",
@@ -177,7 +177,7 @@
                 "\r\n",
                 "> Note: the `?` at the beginning of the SAS token should be removed  \r\n",
                 "\r\n",
-                "> Note: if you are completing this as part of an in-person workshop and were provided an environment to use, please refer to instructor guidance to obtain the SAS token. Otherwise, please refer to the **PREREQS TODO**.\r\n",
+                "> Note: be sure to update the SECRET below\r\n",
                 ""
             ],
             "metadata": {
@@ -189,7 +189,7 @@
             "source": [
                 "CREATE DATABASE SCOPED CREDENTIAL [https://azuresqlworkshopsa.blob.core.windows.net/data/]\r\n",
                 "WITH IDENTITY = 'SHARED ACCESS SIGNATURE',\r\n",
-                "SECRET = 'redacted';"
+                "SECRET = 'Go to URL aka.ms/aswsas20 and copy';"
             ],
             "metadata": {
                 "azdata_cell_guid": "26c0a508-595d-4ead-a680-b8ea422a8d68",
@@ -206,12 +206,12 @@
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:00.014"
+                        "text/html": "Total execution time: 00:00:00.011"
                     },
                     "metadata": {}
                 }
             ],
-            "execution_count": 5
+            "execution_count": 8
         },
         {
             "cell_type": "markdown",
@@ -249,12 +249,12 @@
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:01.471"
+                        "text/html": "Total execution time: 00:00:00.018"
                     },
                     "metadata": {}
                 }
             ],
-            "execution_count": 6
+            "execution_count": 9
         },
         {
             "cell_type": "markdown",
@@ -298,12 +298,12 @@
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:01:07.828"
+                        "text/html": "Total execution time: 00:01:51.021"
                     },
                     "metadata": {}
                 }
             ],
-            "execution_count": 7
+            "execution_count": 10
         },
         {
             "cell_type": "markdown",
@@ -334,13 +334,14 @@
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:01.460"
+                        "text/html": "Total execution time: 00:00:00.820"
                     },
                     "metadata": {}
                 },
                 {
                     "output_type": "execute_result",
-                    "execution_count": 8,
+                    "metadata": {},
+                    "execution_count": 11,
                     "data": {
                         "application/vnd.dataresource+json": {
                             "schema": {
@@ -357,11 +358,10 @@
                             ]
                         },
                         "text/html": "<table><tr><th>(No column name)</th></tr><tr><td>2807797</td></tr></table>"
-                    },
-                    "metadata": {}
+                    }
                 }
             ],
-            "execution_count": 8
+            "execution_count": 11
         },
         {
             "cell_type": "markdown",
@@ -383,23 +383,8 @@
             "metadata": {
                 "azdata_cell_guid": "297d59bb-08be-4680-94e4-028161ac0b4e"
             },
-            "outputs": [
-                {
-                    "output_type": "display_data",
-                    "data": {
-                        "text/html": "Commands completed successfully."
-                    },
-                    "metadata": {}
-                },
-                {
-                    "output_type": "display_data",
-                    "data": {
-                        "text/html": "Total execution time: 00:00:00.042"
-                    },
-                    "metadata": {}
-                }
-            ],
-            "execution_count": 2
+            "outputs": [],
+            "execution_count": null
         },
         {
             "cell_type": "markdown",
