--- a/AzureSQLWorkshop/azuresqlworkshop/02-DeployAndConfigure/cli/AzureCli.ipynb
+++ b/AzureSQLWorkshop/azuresqlworkshop/02-DeployAndConfigure/cli/AzureCli.ipynb
@@ -54,15 +54,13 @@
                 "tags": []
             },
             "outputs": [],
-            "execution_count": 0
+            "execution_count": null
         },
         {
             "cell_type": "code",
             "source": [
                 "# Specify your subscription for the workshop\r\n",
-                "# Should appear in the list of subscriptions output in previous cell under ",
-                " or ",
-                "\r\n",
+                "# Should appear in the list of subscriptions output in previous cell under \"id\" \r\n",
                 "az account set --subscription <subscription-ID>"
             ],
             "metadata": {
@@ -70,9 +68,9 @@
             },
             "outputs": [
                 {
-                    "output_type": "stream",
                     "name": "stdout",
-                    "text": ""
+                    "text": "",
+                    "output_type": "stream"
                 }
             ],
             "execution_count": 2
@@ -90,12 +88,12 @@
             },
             "outputs": [
                 {
-                    "output_type": "stream",
                     "name": "stdout",
-                    "text": ""
+                    "text": "",
+                    "output_type": "stream"
                 }
             ],
-            "execution_count": 3
+            "execution_count": 4
         },
         {
             "cell_type": "markdown",
@@ -116,7 +114,7 @@
                 "azdata_cell_guid": "828e608f-fadd-40a7-8ac2-1f5394a81412"
             },
             "outputs": [],
-            "execution_count": 0
+            "execution_count": null
         },
         {
             "cell_type": "markdown",
@@ -137,7 +135,7 @@
                 "azdata_cell_guid": "85457b28-ac25-40a1-8dea-5cd1ca8a70f2"
             },
             "outputs": [],
-            "execution_count": 0
+            "execution_count": null
         },
         {
             "cell_type": "markdown",
@@ -158,12 +156,12 @@
             },
             "outputs": [
                 {
-                    "output_type": "stream",
                     "name": "stdout",
-                    "text": "[\n  {\n    \"currentValue\": 12582912.0,\n    \"displayName\": \"Database Size\",\n    \"limit\": 34359738368.0,\n    \"name\": \"database_size\",\n    \"nextResetTime\": null,\n    \"resourceName\": \"AdventureWorks0218\",\n    \"unit\": \"Bytes\"\n  },\n  {\n    \"currentValue\": 16777216.0,\n    \"displayName\": \"Database Allocated Size\",\n    \"limit\": 34359738368.0,\n    \"name\": \"database_allocated_size\",\n    \"nextResetTime\": null,\n    \"resourceName\": \"AdventureWorks0218\",\n    \"unit\": \"Bytes\"\n  }\n]\n"
+                    "text": "[\n  {\n    \"currentValue\": 12582912.0,\n    \"displayName\": \"Database Size\",\n    \"limit\": 34359738368.0,\n    \"name\": \"database_size\",\n    \"nextResetTime\": null,\n    \"resourceName\": \"AdventureWorks168563\",\n    \"unit\": \"Bytes\"\n  },\n  {\n    \"currentValue\": 16777216.0,\n    \"displayName\": \"Database Allocated Size\",\n    \"limit\": 34359738368.0,\n    \"name\": \"database_allocated_size\",\n    \"nextResetTime\": null,\n    \"resourceName\": \"AdventureWorks168563\",\n    \"unit\": \"Bytes\"\n  }\n]\n",
+                    "output_type": "stream"
                 }
             ],
-            "execution_count": 6
+            "execution_count": 7
         },
         {
             "cell_type": "markdown",
@@ -215,7 +213,7 @@
                 "azdata_cell_guid": "1af59f8b-afe3-43c5-863d-3549f06871ed"
             },
             "outputs": [],
-            "execution_count": 0
+            "execution_count": null
         },
         {
             "cell_type": "markdown",
@@ -238,7 +236,7 @@
                 "azdata_cell_guid": "5114ebd7-b37d-4cd8-abbc-4a00ba77f798"
             },
             "outputs": [],
-            "execution_count": 0
+            "execution_count": null
         },
         {
             "cell_type": "markdown",
@@ -282,7 +280,7 @@
                 "azdata_cell_guid": "c540779a-9c4d-472f-8ddc-6fc59b8437d4"
             },
             "outputs": [],
-            "execution_count": 0
+            "execution_count": null
         },
         {
             "cell_type": "markdown",
@@ -330,7 +328,7 @@
                 "azdata_cell_guid": "34f23b31-0252-436f-abdb-f0b7208f44b7"
             },
             "outputs": [],
-            "execution_count": 0
+            "execution_count": null
         }
     ]
 }
